[1.164] fix broken links - faq/faq7.html

--- a/faq/faq7.html
+++ b/faq/faq7.html
@@ -67,9 +67,9 @@ FAQ - Управление клавиатурой и дисплеем
 
 <h3 id="ConsoleMouse">Поддержка мыши в консоли</h3>
 
-Для платформ <a href="../alpha.html">alpha</a>,
-<a href="../amd64.html">amd64</a> и <a href="../i386.html">i386</a>
-OpenBSD предоставляет
+Для платформ <a href="https://www.openbsd.org/alpha.html">alpha</a>,
+<a href="https://www.openbsd.org/amd64.html">amd64</a> и
+<a href="https://www.openbsd.org/i386.html">i386</a> OpenBSD предоставляет
 <a href="https://man.openbsd.org/wsmoused">wsmoused(8)</a>.
 Его можно включить при помощи утилиты <a href="https://man.openbsd.org/rcctl">rcctl(8)</a>,
 <a href="faq10.html#rc">описанной в FAQ</a>.
