--- a/openssh/index.html
+++ b/openssh/index.html
@@ -14,7 +14,7 @@
       <h1>Проект OpenSSH</h1>
       <ul>
         <li><a href="goals.html">Цели проекта</a>
-        <li><a href="https://www.openssh.com/releasenotes.html">Release Notes</a>
+        <li><a href="https://www.openssh.com/releasenotes.html">Информация о выпусках</a>
         <li><a href="history.html">История</a>
         <li><a href="features.html">Возможности</a>
         <li><a href="https://www.openssh.com/security.html">Безопасность</a>
@@ -56,7 +56,7 @@
         Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.1">OpenSSH 8.1</a> состоялся 9 октября 2019 года.<br>
 <p>
 OpenSSH это основной инструмент для создания соединений по протоколу SSH.
-Он шифрует весь траффик, что исключает прослушивание, захват соединений,
+Он шифрует весь трафик, что исключает прослушивание, захват соединений,
 и другие атаки.
 Кроме того, OpenSSH предоставляет широкие возможности для создания безопасного
 туннелирования, несколько методов аутентификации и множество раличных настроек.
