[1.737] sync - index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <li><a href="https://www.openbsd.org/plus.html">Changelog</a>
         <li><a href="faq/index.html">FAQ</a>
         <li><a href="https://man.openbsd.org">Man-страницы</a>
-        <li><a href="https://www.openbsd.org/errata65.html">Патчи</a>
+        <li><a href="https://www.openbsd.org/errata66.html">Патчи</a>
         <li><a href="https://www.openbsd.org/report.html">Сообщить об ошибке</a>
         <li><a href="mail.html">Почтовые рассылки</a>
         <li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
@@ -68,7 +68,8 @@
 
     <td>
       <h1 class="header">
-         <img src="images/puffy65.gif" height="198" width="599" alt="[OpenBSD 6.5]"></a>
+         <a href="66.html">
+         <img src="images/puffy66.gif" height="198" width="599" alt="[OpenBSD 6.6]"></a>
       </h1>
 
       <p id="callout">
@@ -85,9 +86,9 @@
       Информацию по поводу загрузки OpenBSD можно найти на станице download.
 
       <p>
-      Последний релиз нашей системы,
-      <a href="https://www.openbsd.org/65.html">OpenBSD 6.5</a>,
-      вышел на неделю раньше запланированного срока - 24 апреля 2019 года.
+      Последняя версия,
+      <a href="https://www.openbsd.org/66.html">OpenBSD 6.6</a>,
+      вышла 17 октября 2019 года.
 
       <p>
       OpenBSD разрабатывается добровольцами. Процесс разработки, а также
