[1.737] fix link to the 66 page - index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <td>
       <h1 class="header">
-         <a href="66.html">
+         <a href="https://www.openbsd.org/66.html">
          <img src="images/puffy66.gif" height="198" width="599" alt="[OpenBSD 6.6]"></a>
       </h1>
 
