--- a/stable.html
+++ b/stable.html
@@ -57,9 +57,9 @@ OpenBSD, вы можете просто <a href="anoncvs.html#updating">доза
 сервера <a href="anoncvs.html">AnonCVS</a>.
 
 <p>
-Не пытайтесь обновляться с одного релиза к другому при помощи компиляции
-исходников. Вместо этого, пожалуйста, следуйте инструкциям из
-<a href="https://www.openbsd.org/faq/upgrade65.html">руководства (upgrade guide)</a>
+Не пытайтесь обновляться с одного релиза на другой компилируя исходники.
+Вместо этого, следуйте инструкциям из
+<a href="https://www.openbsd.org/faq/upgrade66.html">руководства (upgrade guide)</a>
 для release, прежде чем компилировать -stable.
 
 <h3 id="building">Сборка OpenBSD -stable</h3>
