--- a/faq/faq6.html
+++ b/faq/faq6.html
@@ -116,11 +116,11 @@ inet 10.0.0.38 255.255.255.0
 умолчанию. Информацию о них вы можете найти в man-страницах:
 
 <ul>
-  <li><a href="https://man.openbsd.org/enc">enc</a>
+  <li><a href="https://man.openbsd.org/enc">enc(4)</a>
     - Encapsulating interface
-  <li><a href="https://man.openbsd.org/lo">lo</a>
+  <li><a href="https://man.openbsd.org/lo">lo(4)</a>
     - Loopback interface
-  <li><a href="https://man.openbsd.org/pflog">pflog</a>
+  <li><a href="https://man.openbsd.org/pflog">pflog(4)</a>
     - Packet Filter logging interface
 </ul>
 
@@ -363,22 +363,22 @@ OpenBSD поддерживает
 
 <ul>
   <li><a href="https://man.openbsd.org/acx">acx(4)</a>
-    TI ACX100/ACX111
+    - TI ACX100/ACX111
   <li><a href="https://man.openbsd.org/ath">ath(4)</a>
-    Atheros 802.11a/b/g
+    - Atheros 802.11a/b/g
   <li><a href="https://man.openbsd.org/athn">athn(4)</a>
-    Atheros 802.11/a/g/n devices
+    - Atheros 802.11/a/g/n devices
   <li><a href="https://man.openbsd.org/pgt">pgt(4)</a>
-    Conexant/Intersil Prism GT Full-MAC 802.11a/b/g
+    - Conexant/Intersil Prism GT Full-MAC 802.11a/b/g
   <li><a href="https://man.openbsd.org/ral">ral(4)</a>
-    and <a href="https://man.openbsd.org/ural">ural(4)</a>
-    Ralink Technology RT25x0 802.11a/b/g
+      и <a href="https://man.openbsd.org/ural">ural(4)</a>
+    - Ralink Technology RT25x0 802.11a/b/g
   <li><a href="https://man.openbsd.org/rtw">rtw(4)</a>
-    Realtek 8180 802.11b
+    - Realtek 8180 802.11b
   <li><a href="https://man.openbsd.org/rum">rum(4)</a>
-    Ralink Technology RT2501USB
+    - Ralink Technology RT2501USB
   <li><a href="https://man.openbsd.org/wi">wi(4)</a>
-    Prism2/2.5/3
+    - Prism2/2.5/3
 </ul>
 
 Команда <a href="https://man.openbsd.org/ifconfig">ifconfig(8)</a> <code>media</code>
