--- a/libressl/index.html
+++ b/libressl/index.html
@@ -39,7 +39,7 @@
       </h1>
 
       <p id="callout">
-        Релиз <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-2.9.2-relnotes.txt">LibreSSL 2.9.2</a> состоялся 20 мая 2019 года
+        <a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.0.2-relnotes.txt">LibreSSL 3.0.2</a> вышла 19 октября 2019 года
     
     <p>
     LibreSSL представляет из себя криптографический TLS-стек, возникший
@@ -55,8 +55,7 @@
     ОС (Linux, FreeBSD, Windows, и.т.д.).
 
     <p>
-    Последним стабильным релизом является 2.9.2.<br>
-    Последним разрабатываемым релизом является 3.0.1.<br>
+    Последнем стабильным релизом является версия 3.0.2.<br>
     Больше информации можно найти на странице <a href="releases.html">доступных версий</a>.
 
     <p>
